# macroforecast

./: .buildinfo  .buildinfo.bak  .gitignore  .readthedocs.yaml  ARCHITECTURE.md  BUILDING.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.html  DESIGN.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  conftest.py  foundation_core.html  genindex.html  getting_started.html  help.html  implementation.md  index.html  install.html  mailbox.md  mkdocs.yml  navigator_ui_redesign_plan.html  objects.inv  philosophy.html  py-modindex.html  pyproject.toml  raw.html  recipes.html  reference.html  replications.html  search.html  searchindex.js  stage0.html  troubleshooting.html  two_entry_points.html  user_guide.html
.dev-notes/: codex_progress.md  codex_progress_a1.md  codex_progress_a2.md  codex_progress_a3.md  codex_progress_a4.md  codex_progress_a5.md  codex_progress_a6-testknobs.md  codex_progress_a7.md  codex_progress_c1fix.md  codex_progress_citrust.md  codex_progress_failfast.md  codex_progress_figures.md  codex_progress_identity.md  codex_progress_runtime.md  env_drift_diagnosis.md  policy_matrix_results.json  spa_size_investigation.md
.doctrees/: CONVENTIONS.doctree  foundation_core.doctree  index.doctree  install.doctree  philosophy.doctree
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_CHECKLIST.md
_audit/: docs-structure-plan-2026-05-27.html  encyclopedia-option-sync-2026-05-27.html  howto-import-audit-2026-05-27.html  l2-dispatch-audit-2026-05-27.html  recipe-sweep-2026-05-26.html  recipe-sweep-2026-05-27-post-pr7.html  sphinx-warning-audit-2026-05-27.html  standalone-callable-inventory-2026-05-27.html
_modules/: index.html
_sources/: BUILDING.md.txt  foundation_core.md.txt  getting_started.md.txt  help.md.txt  index.md.txt  install.md.txt  navigator_ui_redesign_plan.md.txt  philosophy.md.txt  reference.md.txt  troubleshooting.md.txt  user_guide.md.txt
_static/: documentation_options.js
api/: compiler.html  decomposition.html  design.html  execution.html  index.html  preprocessing.html  raw.html  recipes.html  registry.html  stage0.html  start.html  sweep_runner.html
architecture/: artifacts_and_manifest.html  foundation.html  index.html  layer_boundary_contract.html  philosophy.html  recipe_layers.html  reproducibility.html  terminology.html  v089_verification_plan.html  v089_verification_results.html  v09_paper_coverage_plan.html
config/: data_tasks.yaml  datasets.yaml  evaluation.yaml  features.yaml  interpretation.yaml  models.yaml  output.yaml  preprocessing.yaml  targets.yaml  tests.yaml  verification.yaml
datasets/: fred_md.html  fred_md_sd.html  fred_qd.html  fred_qd_sd.html  fred_sd.html  index.html
detail/: artifacts_and_manifest.html  contract_source_of_truth.html  custom_extensions.html  decision_tree_navigator.html  default_profiles.html  execution_engine.html  experiment_object.html  fred_sd_inferred_tcode_review_v0_1.html  fred_sd_inferred_tcodes.html  fred_sd_transform_policy.html  index.html  layer0_meta_audit.html  layer1_data_task_audit.html  layer2_closure_ledger.html  layer2_feature_representation.html  layer2_layer3_detailed_design.html  layer2_layer3_grid_examples.html  layer2_layer3_sweep_contract.html  layer2_revision_plan.html  layer3_training_audit.html  layer_audit.html  layer_axis_census.html  layer_axis_migration_plan.html  layer_boundary_contract.html  layer_contract_ledger.html  package_runtime_gap_audit.html  philosophy.html  post_pr70_runtime_roadmap.html  preprocessing_layer_audit.html  raw_panel_iterated_contract.html  recipe_layers.html  registry_axes.html  reproducibility.html  target_transformer.html  terminology.html
dev/: reproducibility_policy.html
docs/: CONVENTIONS.md  Makefile  cli.md  compiler.md  conf.py  execution.md  foundation_core.md  getting-started.md  getting_started.md  help.md  index.md  install.md  navigator_ui_redesign_plan.md  philosophy.md  preprocessing.md  reference.md  replications.md  roadmap.md  troubleshooting.md  two_entry_points.md  user_guide.md
encyclopedia/: browse_by_axis.html  browse_by_layer.html  browse_by_option.html  index.html  public_api.html
examples/: custom_fred_sd_mixed_frequency_model.py
explanation/: 12_layer_design.html  artifacts_and_manifest.html  bit_exact_replicate.html  deprecation_timeline.html  foundation.html  honesty_pass.html  index.html  layer_boundary_contract.html  layer_design.html  migration_guide.html  philosophy.html  recipe_layers.html  recipe_to_run.html  reproducibility.html  terminology.html
for_contributors/: index.html  reproducibility_policy.html
for_recipe_authors/: custom_function_quickstart.html  custom_hooks.html  data_policies.html  default_profiles.html  design.html  index.html  partial_layer_execution.html  target_transformer.html
for_researchers/: first_study.html  fred_sd_inferred_tcode_review_v0_1.html  fred_sd_inferred_tcodes.html  fred_sd_transform_policy.html  index.html  quickstart.html  recipe_gallery.html  runtime_support.html  understanding_output.html  user_data_workflow.html
fred_dataset/: fred_md.html  fred_qd.html  fred_sd.html  index.html
getting_started/: first_study.html  index.html  quickstart.html  runtime_support.html  stages_reference.html  understanding_output.html
guide/: citing.html  custom_data_tutorial.html  figures.html  gallery.html  getting_started.html  glossary.html  index.html  model_overview.html  model_policy_matrix.html  multi_axis_comparison.html  reporting.html  vintages.html
how_to/: add_custom_dataset.html  add_custom_model.html  add_dataset.html  advanced_recipes.html  bayesian_var_minnesota.html  chow_lin_disaggregation.html  compare_midas_variants.html  contributing.html  conventions.html  custom_hooks.html  custom_model.html  feature_selection_boruta.html  forecast_volatility_realized_garch.html  index.html  irf_pesaran_shin_girf.html  partial_execution.html  partial_layer_execution.html  replicate_a_study.html  reproducibility_policy.html  sweep_over_models.html  target_transformer.html  troubleshooting.html  tune_hyperparameters.html  use_custom_hooks.html  (+3 more)
(+4110 files in other folders)
