[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macroforecast"
version = "0.10.0a0"
description = "Pandas-first macro forecasting workflow package"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "NanyeonK", email = "104714490+NanyeonK@users.noreply.github.com"}]
keywords = ["forecasting", "macroeconomics", "fred-md", "fred-qd", "fred-sd", "pandas"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "scipy>=1.11",
    "openpyxl>=3.1",
]

[project.urls]
Documentation = "https://macroforecast.readthedocs.io/"
Repository = "https://github.com/NanyeonK/macroforecast"
Issues = "https://github.com/NanyeonK/macroforecast/issues"
Changelog = "https://github.com/NanyeonK/macroforecast/blob/main/CHANGELOG.md"

[project.optional-dependencies]
parquet = ["pyarrow>=14.0"]
xgboost = ["xgboost>=3.0,<3.1"]
lightgbm = ["lightgbm>=4.0"]
catboost = ["catboost>=1.2"]
arch = ["arch>=6.0"]
mars = ["sklearn-contrib-py-earth>=0.1.0; python_version < '3.11'"]
macro_random_forest = ["joblib>=1.5", "matplotlib>=3.8"]
docs = [
    "sphinx>=7.0",
    "pydata-sphinx-theme>=0.15",
    "sphinx-design>=0.5",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
]
typecheck = ["mypy>=1.13"]
markdown = ["tabulate>=0.9"]
all = ["macroforecast[parquet,markdown,xgboost,lightgbm,catboost,arch,mars,macro_random_forest]"]
ci = ["pytest>=8.0", "macroforecast[parquet,markdown]"]
dev = ["pytest>=8.0", "macroforecast[all]"]

[project.scripts]
macroforecast = "macroforecast.__main__:main"

[tool.setuptools.packages.find]
include = ["macroforecast*"]

[tool.setuptools.package-data]
macroforecast = ["py.typed", "models/_mrf_reference.LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["--import-mode=importlib"]
markers = [
    "slow: realistic-shape integration tests (gated; opt in with `pytest -m slow`)",
]

[tool.mypy]
python_version = "3.10"
files = ["macroforecast"]
ignore_missing_imports = true
follow_imports = "skip"
show_error_codes = true
pretty = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]
